Update CSS, Layout and animation

--- a/Animation.html
+++ b/Animation.html
@@ -1,204 +1,252 @@
+<!--UPDATE-->
 <!DOCTYPE html>
-<html>
-<!-- metadata-->
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>CSS_Review</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+    <html>
+    <!-- metadata-->
 
-	<!-- body has the content-->
-<body>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>CSS_Review</title>
+      <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-	<h1 id="mainH">CSS</h1>
-  <h1 id="logo">
-       Review Page
-  </h1>
+    <!-- body has the content-->
 
-	<nav>
-		<a href="index.html">Home</a>
-		<a href="Animation.html">Animations</a>
-		<a href="Layout.html">Layouts</a>
-		<a href=".html"></a>
-	</nav>
-<div id="twoD">  
-	<h1>The translate() Method</h1>
-<p>The translate() method moves an element from its current position:</p>
+    <body>
 
-<div>
-This div element is moved 50 pixels to the right, and 100 pixels down from its current position.
-</div>
-<hr>
-  <h1>The rotate() Method</h1>
+      <h1 id="mainH">CSS</h1>
+      <h1 id="logo">
+        Review Page
+      </h1>
 
-<p>The rotate() method rotates an element clockwise or counter-clockwise.</p>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="Animation.html">Animations</a>
+        <a href="Layout.html">Layouts</a>
+        <a href=".html"></a>
+      </nav>
 
-<div>
-This a normal div element.
-</div>
 
-<div id="myDiv">
-This div element is rotated clockwise 20 degrees.
-</div>
 
-  <hr>
-<h1>The scale() Method</h1>
+      <div id="twoD">
+        <h1>The translate() Method</h1>
+        <p>The translate() method moves an element from its current position:</p>
 
-<p>The scale() method increases or decreases the size of an element.</p>
+        <div class="box trans">
+          This div element is moved 50 pixels to the right, and 100 pixels down from its current position.
+        </div>
+        <hr>
+        <div class="box transX">
+          This div element is moved 50 pixels to the right.
+        </div>
+        <hr>
+        <div class="box transY">
+          This div element is moved 100 pixels down from its current position.
+        </div>
 
-<div>
-This div element is two times of its original width, and three times of its original height.
-</div>
 
-  <hr>
-<h1>The scaleX() Method</h1>
 
-<p>The scaleX() method increases or decreases the width of an element.</p>
 
-<div>
-This div element is two times of its original width.
-</div>
-<hr>
-  <h1>The scaleY() Method</h1>
 
-<p>The scaleY() method increases or decreases the height of an element.</p>
 
-<div>
-This div element is three times of its original height.
-</div>
+        <hr>
+        <h1>The rotate() Method</h1>
 
-  <hr>
-<h1>The skewX() Method</h1>
+        <p>The rotate() method rotates an element clockwise or counter-clockwise.</p>
 
-<p>The skewX() method skews an element along the X-axis by the given angle.</p>
+        <hr>
+        <div id="rotate" class="box">
+          This div element rotates X and Y
+        </div>
+        <hr>
+        <div id="rotateX" class="box">
+          This div element is rotated clockwise 20 degrees on the X-axis
+        </div>
+        <hr>
+        <div id="rotateY" class="box">
+          This div element is clockwise 20 degrees on the Y-Axis
+        </div>
 
-<div>
-This a normal div element.
-</div>
 
-<div id="myDiv">
-This div element is skewed 20 degrees along the X-axis.
-</div>
 
-  <hr>
-<h1>The matrix() Method</h1>
 
-<p>The matrix() method combines all the 2D transform methods into one.</p>
 
-<div>
-This a normal div element.
-</div>
 
-<div id="myDiv1">
-Using the matrix() method.
-</div>
+        <hr>
+        <h1>The scale() Method</h1>
 
-<div id="myDiv2">
-Another use of the matrix() method.
-</div>
-</div>
-  
-  <div id="threeD">
-    <h1>The rotateX() Method</h1>
+        <p>The scale() method increases or decreases the size of an element.</p>
 
-<p>The rotateX() method rotates an element around its X-axis at a given degree.</p>
+        <div id="scale" class="box">
+          This div element is two times of its original width, and three times of its original height.
+        </div>
 
-<div>
-This a normal div element.
-</div>
+        <hr>
+        <h1>The scaleX() Method</h1>
 
-<div id="myDiv">
-This div element is rotated 150 degrees.
-</div>
-    <hr>
-    <h1>The rotateY() Method</h1>
+        <p>The scaleX() method increases or decreases the width of an element.</p>
 
-<p>The rotateY() method rotates an element around its Y-axis at a given degree.</p>
+        <div id="scale" class="box">
+          This div element is two times of its original width.
+        </div>
+        <hr>
+        <h1>The scaleY() Method</h1>
 
-<div>
-This a normal div element.
-</div>
+        <p>The scaleY() method increases or decreases the height of an element.</p>
 
-<div id="myDiv">
-This div element is rotated 150 degrees.
-</div>
-    <hr>
-<h1>The rotateZ() Method</h1>
+        <div id="scale" class="box">
+          This div element is three times of its original height.
+        </div>
 
-<p>The rotateZ() method rotates an element around its Z-axis at a given degree.</p>
 
-<div>
-This a normal div element.
-</div>
 
-<div id="myDiv">
-This div element is rotated 90 degrees.
-</div>
-  </div>
-  <div id="transitions">
-    <hr>
-    <h1>The transition Property</h1>
 
-<p>Hover over the div element below, to see the transition effect:</p>
-<div></div>
-    
-  </div>
 
-  <div id="animations">
-    <hr>
-    <h1>CSS Animation background</h1>
+        <hr>
+        <h1>The skewX() Method</h1>
 
-<div></div>
+        <p>The skewX() method skews an element along the X-axis & Y-Axis by the given angle.</p>
 
-<p><b>Note:</b> When an animation is finished, it goes back to its original style.</p>
-<h1>CSS Animation background and position</h1>
+        <hr>
+        <div id="skew" class="box">
+          Skews the X-axis and Y-axis by the given angle
+        </div>
+        <hr>
+        <div id="skewX" class="box">
+          This div element is skewed 20 degrees along the X-axis.
+        </div>
+        <hr>
+        <div id="skewY" class="box">
+          This div element is skewed 20 degrees along the Y-axis.
+        </div>
 
-<div></div>
 
-<p><b>Note:</b> When an animation is finished, it goes back to its original style.</p>
-<hr>
-    <h1>CSS Animation delay</h1>
 
-<p>The animation-delay property specifies a delay for the start of an animation. The following example has a 2 seconds delay before starting the animation:</p>
 
-<div></div>
-    <hr>
-<h1>CSS Animation repetitions</h1>
 
-<p>The animation-iteration-count property specifies the number of times an animation should run. The following example will run the animation 3 times before it stops:</p>
+        <hr>
+        <h1>The matrix() Method</h1>
 
-<div></div>
-<hr>
+        <p>The matrix() method combines all the 2D transform methods into one.</p>
 
-    <h1>CSS Animation reverse direction or alternate cycles</h1>
+        <div>
+          This a normal div element.
+        </div>
+        <div id="matrix" class="box">
+          This is a matrix div element.
+        </div>
+        <hr>
+        <div id="matrix2" class="box">
+          Another use of the matrix() method.
+        </div>
+        <hr>
+        <div id="yourOwnMatrix" class="box">
+          My own use of the matrix() method.
+        </div>
+      </div>
+      <br>
+      <div id="threeD">
+        <hr>
+        <h1> Translate 3D </h1>
+        <div class="box" id="trans3D">Translate 3D</div>
+        <hr>
+        <h1>The rotateZ() Method</h1>
 
-<p>The animation-direction property specifies whether an animation should be played forwards, backwards or in alternate cycles. The following example will run the animation in reverse direction (backwards):</p>
+        <p>The rotateZ() method rotates an element around its Z-axis at a given degree.</p>
 
-<div></div>
-    <hr>
-<h1>CSS Specify the Speed Curve of the Animation </h1>
+        <div class="box" id="rotateZ">
+          This a normal div element.
+        </div>
 
-<p>The animation-timing-function property specifies the speed curve of the animation. The following example shows some of the different speed curves that can be used:</p>
+      </div>
+      <br>
+      <div id="transitions">
+        <hr>
 
-<div id="div1">linear</div>
-<div id="div2">ease</div>
-<div id="div3">ease-in</div>
-<div id="div4">ease-out</div>
-<div id="div5">ease-in-out</div>
-<hr>
-<h1>CSS Animation Specify the fill-mode <h1>
+        <h1>The transition Property</h1>
 
-<p>Let the div element get the style values set by the first keyframe before the animation starts (during the animation-delay period):</p>
+        <p>Hover over the div element below, to see the transition effect:</p>
 
-<div></div>
-<hr>
-  <h1>CSS Animation Shorthand </h1>
 
-<p>This example uses the shorthand animation property:</p>
+        <div class="box1" id="transition">Transition</div>
+        <hr>
 
-<div></div>
-  </div>
-	</body>
+        <div class="box1" id="delay">Delay </div>
+        <hr>
 
-</html>
+        <div class="box1" id="duration">Duration </div>
+        <hr>
+
+        <div class="box1" id="propert">Property</div>
+        <hr>
+
+        <div class="box1" id="timing">Timing-Function</div>
+        <hr>
+      </div>
+      <br>
+        <div id="animations">
+          <hr>
+          <h1>CSS Animation background</h1>
+
+          <div class="box1" id="animate"></div>
+
+          <p><b>Note:</b> When an animation is finished, it goes back to its original style.</p>
+          <h1>CSS Animation background and position</h1>
+
+          <div class="box1" id="animate2"></div>
+
+          <p><b>Note:</b> When an animation is finished, it goes back to its original style.</p>
+          <hr>
+          <p><b>Note:</b> When an animation is finished, it goes back to its original style.</p>
+          <h1>CSS Animation background and position</h1>
+          <div class="box1" id="animate3"></div>
+
+          <p>The animation-delay property specifies a delay for the start of an animation. The following example has a 2
+            seconds delay before starting the animation:</p>
+
+          <div></div>
+          <hr>
+          <h1>CSS Animation delay</h1>
+          <hr>
+          <h1>CSS Animation repetitions</h1>
+
+          <p>The animation-iteration-count property specifies the number of times an animation should run. The following
+            example will run the animation 3 times before it stops:</p>
+
+          <div></div>
+          <hr>
+
+          <h1>CSS Animation reverse direction or alternate cycles</h1>
+
+          <p>The animation-direction property specifies whether an animation should be played forwards, backwards or in
+            alternate cycles. The following example will run the animation in reverse direction (backwards):</p>
+
+          <div></div>
+          <hr>
+          <h1>CSS Specify the Speed Curve of the Animation </h1>
+
+          <p>The animation-timing-function property specifies the speed curve of the animation. The following example shows
+            some of the different speed curves that can be used:</p>
+
+          <div id="div1">linear</div>
+          <div id="div2">ease</div>
+          <div id="div3">ease-in</div>
+          <div id="div4">ease-out</div>
+          <div id="div5">ease-in-out</div>
+          <hr>
+          <h1>CSS Animation Specify the fill-mode <h1>
+
+              <p>Let the div element get the style values set by the first keyframe before the animation starts (during the
+                animation-delay period):</p>
+
+              <div></div>
+              <hr>
+              <h1>CSS Animation Shorthand </h1>
+
+              <p>This example uses the shorthand animation property:</p>
+
+              <div></div>
+        </div>
+    </body>
+
+    </html>
